Fixed some layout bugs.

--- a/css/index.css
+++ b/css/index.css
@@ -104,10 +104,11 @@ body {
 .iframe-container {
   position: relative;
   overflow: hidden;
-  /* width: 60%;
-  padding-top: 42.85%; 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-  width: 100%;
-  padding-top: 30%;
+  width: 60%;
+  padding-top: 32.85%; 
+  /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  /* width: 100%; */
+  /* padding-top: 30%; */
 }
 
 /* Responsive iframe */
